feat: 숫자 야구 게임 기능 구현

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       src="https://kit.fontawesome.com/51bbb005d8.js"
       crossorigin="anonymous"
     ></script>
-    <script src="./index.js"></script>
+    <script src="./js/index.js"></script>
   </head>
   <body>
     <div class="background">
