--- a/game.html
+++ b/game.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <title>Game</title>
-  <link href="/styles/game.css" rel="stylesheet">
+  <link href="./styles/game.css" rel="stylesheet">
 </head>
 <body>
   <div class="wrapper">
@@ -61,5 +61,5 @@
   </div>
   </div>
 </body>
-<script type="module" src="/js/game.js"></script>
+<script type="module" src="./js/game.js"></script>
 </html>
