--- a/home.html
+++ b/home.html
@@ -12,12 +12,15 @@
           <div class="subtitle">TODAY STORY</div>
         </div>
         <div class="divideLine"></div>
-        <div class="contents__body">안녕하세요! 프론트엔드 개발자 강미네입니다.</div>
+        <div class="contents__body">
+          <p>싸이월드 웹 버전이 사라진게 아쉬워서 직접 만든 미니홈피입니다 🏠</p>
+          <p>게임 탭에 들어가서 3가지 미니게임을 해보세요!</p>
+        </div>
       </div>
       <div class="wrapper__body">
         <div class="contents__title">
-          <div class="title">My Video</div>
-          <div class="subtitle">INTRODUCE YOURSELF</div>
+          <div class="title">Mini Room</div>
+          <div class="subtitle">EXPRESS YOURSELF</div>
         </div>
         <div class="video"></div>
       </div>
