--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
               </div>
               <div class="left__body__footer">
                 <div class="wrapper__feel">
-                  <div class="feel__title">오늘의 기분</div>
+                  <div class="feel__title">파도타기</div>
                   <select class="feel__select">
-                    <option>조아요 😊</option>
-                    <option>슬퍼요 😥</option>
-                    <option>화나요 😡</option>
-                    <option>분노 🤬</option>
+                    <option>드로우앤드류</option>
+                    <option>바타</option>
+                    <option>재이호</option>
+                    <option>김풀</option>
                   </select>
                 </div>
               </div>
